# equation-sampler

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish.yml
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/: __init__.py
src/autora/experiment_runner/synthetic/generator/equation_sampler/: equation_sampler.py
src/autora/experiment_runner/synthetic/generator/equations/: __init__.py  equation_tree.py
src/equation_sampler/: __init__.py  equation_tree.py  measure.py  sampler.py
src/equation_sampler/data/: adjusted_probabilities.json
src/equation_sampler/util/: hashing.py  unary_minus_to_binary.py
tests/: test_equation_sampler.py  test_equation_tree.py
