[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora-synthetic-generator-equation-sampler"
description = "Describe your contribution"
authors = [{ name = "Ioana Marinescu", email = "ioanam@princeton.edu" }]
dynamic = ["version"]

readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "sympy"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-synthetic-generator-equation-sampler"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
