[project]
# UPDATE THIS BEFORE PUBLISHING
name = "equation-sampler"
description = "Tool to sample equations"
authors = [{ name = "Ioana Marinescu", email = "ioanam@princeton.edu" }]
dynamic = ["version"]

readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "numpy",
    "sympy",
    "importlib_resources"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-synthetic-generator-equation-sampler"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
